2010-04-13  Stefan Kost  <ensonic@users.sf.net>

	patch by: Sebastian Dröge <slomo@circular-chaos.org>

	* src/BuzzMachineLoader/Makefile.am:
	* src/Makefile.am:
	* src/bml.c:
	  Use pkgdir for dlopened libraries.

2010-03-30  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Improve checking of non-std install prefix.

2010-03-29  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/ldt_keeper.c:
	  Remove wrong copyright header. Upstream versions in xine/mplayer
	  repositories don't have this and the legal notice from xine (included
	  in README one level up) also states that this code is LGPL.

2010-02-03  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Update stats.

	* dllwrapper/wine/Makefile.am:
	  Remove obsolete comment.

	* dllwrapper/wine/pe_image.c:
	* dllwrapper/wine/stubs.s:
	  Formatting.

	* tests/testmachine.sh:
	  Fix example.

2010-01-22  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/debugtools.h:
	* src/bml.c:
	  Fix the build for --disable-debug.

2010-01-13  Stefan Kost  <ensonic@users.sf.net>

	* README:
	* dllwrapper/wine/debugtools.h:
	* dllwrapper/wine/module.c:
	* dllwrapper/wine/registry.c:
	* dllwrapper/wine/win32.c:
	* src/bml.c:
	* tests/testmachine.sh:
	  Turn BLM_DEBUG envvar into flag based for more finegrained log control.
	  Have also filename:lineno on bml debug logs.

2010-01-12  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/debugtools.h:
	* dllwrapper/wine/ldt_keeper.c:
	* dllwrapper/wine/module.c:
	* dllwrapper/wine/pe_image.c:
	* dllwrapper/wine/registry.c:
	* src/bml.c:
	  Add a custom logger, that also prints timestamps. Small cleanups and
	  fixmes.

2009-11-01  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_info.c:
	* src/bmltest_info.h:
	* tests/testmachine.sh:
	  Print creating and init time. Add to testmachine script.

2009-11-01  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* configure.ac:
	* dllwrapper/wine/elfdll.c: